<resources>
    <!-- Strings related core application -->
    <string name="app_name">Malo</string>

    <!-- Strings related field -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password_confirmation">Confirmer mot de passe</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="prompt_birhtday">Date de naissance</string>
    <string name="prompt_phone_number">Numéro de tel</string>
    <string name="prompt_twitter">\@twitter</string>
    <string name="prompt_name_family">Nom de la famille</string>
    <string name="prompt_user_name">Nom d\'utilisateur</string>
    <string name="prompt_task_date">date de l\'activité</string>


    <!-- Strings related field error -->
    <string name="error_invalid_email">Cette adresse email est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrecte</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_no_invitation_family">Vous n\'avez pas encore d\'invitation à rejoindre une famille</string>


    <!-- Strings related action -->
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="action_confirm_update">Confirmer</string>
    <string name="action_cancel_update">Annuler</string>
    <string name="new_account">Créer un compte</string>
    <string name="action_register">Inscription</string>
    <string name="action_send_password">Renvoyer mot de passe</string>
    <string name="action_create_family">Créer</string>

    <!-- Strings related title page -->
    <string name="title_calendar">Calendrier</string>
    <string name="title_new_account">Nouvel utilisateur</string>
    <string name="title_task">Activité</string>
    <string name="title_connection">Connexion</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_losing_password">Mot de passe oublié</string>
    <string name="title_create_family">Créer ma famille</string>
    <string name="title_join_family">Rejoindre une famille</string>
    <string name="title_my_family">Ma famille</string>

    <!-- New Strings -->
    <string name="family">Famille : </string>
    <string name="or">ou</string>

    <!-- Strings related other things -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_menu_configuration">Configuration</string>
    <string name="title_my_account">Mon Compte</string>
    <string name="title_menu_deconnection">Déconnexion</string>
    <string name="title_list_shopping">Liste des courses</string>
    <string name="title_menu_app">Application</string>
    <string name="title_My_Account">Mon compte</string>


</resources>
