<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_menu_app"
        android:icon="@drawable/ic_menu_manage">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/title_calendar" />
            <item
                android:id="@+id/nav_shopping"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_list_shopping" />
        </menu>
    </item>

    <item android:title="@string/title_menu_configuration"
        android:icon="@drawable/ic_menu_manage">
        <menu>
            <item
                android:id="@+id/nav_my_family"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_my_family" />
            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/title_my_account" />
            <item
                android:id="@+id/nav_deconnection"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_menu_deconnection" />
        </menu>
    </item>
</menu>
