<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ihm.malo.NoFamilyActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="right" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Bienvenue sur Malo "
                    android:id="@+id/TextViewBienvenue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Ibtissam"
                    android:id="@+id/TextView_no_family_name"
                    android:layout_gravity="right"
                    android:textColor="#ff0000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="crée ou rejoins une famille"
                    android:id="@+id/textView5" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-------------------"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_create_family"
                android:id="@+id/textView6"
                android:clickable="false"
                android:height="50dp"
                android:textColor="#ff4040"
                android:textSize="35sp"
                android:fontFamily="bo"
                android:layout_gravity="left" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:hint="@string/prompt_name_family"
                    android:linksClickable="false" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_create_family"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:background="#ff4040"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ButtonCreerFamille" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-------------------"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_join_family"
                android:id="@+id/textView7"
                android:layout_gravity="left"
                android:clickable="false"
                android:height="50dp"
                android:textColor="#ff4040"
                android:textSize="35sp"
                android:fontFamily="bo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/no_invitation_family"
                android:id="@+id/TextView_no_family_invitation" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
